Fixed bugs with overlapping

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -37,3 +37,7 @@
     transform: translateY(0px);
   }
 }
+
+.fc-popover {
+  z-index: 1 !important;
+}
